@@ -1,6 +1,7 @@
 Changes
 MANIFEST
 Makefile.PL
+bin/pdfburst
 lib/PDF/Burst.pm
 t/00_find_which_burst_works.t
 t/01_burst14.t
