@@ -1,3 +1,7 @@
+2008-08-13 09:37  cvs
+
+	* bin/pdfburst: Added cli script pdfburst
+
 2008-08-07 09:44  cvs
 
 	* lib/PDF/Burst.pm, t/00_burst.t, t/00bust.pl, t/02_burst_scan1.t,
